update layout to use dvh instead of vh to prevent clipping of top content in mobile's desktop view

--- a/src/components/layout/AppLayout.module.css
+++ b/src/components/layout/AppLayout.module.css
@@ -1,7 +1,7 @@
 .layout {
   display: grid;
   grid-template-rows: 35px 1fr 22px;
-  height: 100vh;
+  height: 100dvh;
   overflow: hidden;
 }
 
